# billie-bot

./: .gitignore  HEROKU_DEPLOYMENT.md  README.md  main.py  pyproject.toml  reqirements.txt
app/: __init__.py  config.py  routes.py  security.py  utils.py
app/services/google/: google_utils.py  quickstart.py
app/services/invoice_processor/: __init__.py  classifier.py  invoice.py  proccessor.py
app/services/splitwise/: spitwise_utils.py
conf/: logging.json
scripts/: setup_heroku_auth.py  test_auth.py
services/google/: __init__.py  google_utils.py  quickstart.py
tests/: test_classifier.py  test_google_utils.py  test_invoice.py  test_processor.py  test_splitwise_utils.py
tests/app/utils/: test_util.py
