[project]
name = "billie-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "google-auth>=2.0.0",
    "google-cloud-documentai>=3.6.0",
    "gunicorn>=23.0.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "splitwise>=3.0.0",
]
